--- a/spring-boot-data-jpa/src/main/resources/application.yml
+++ b/spring-boot-data-jpa/src/main/resources/application.yml
@@ -1,9 +1,9 @@
-#spring:
-#  datasource:
-#    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
-#    username: root
-#    password: root
-#    driver-class-name: net.sf.log4jdbc.DriverSpy #com.mysql.jdbc.Driver
+spring:
+  datasource:
+    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/jpa_test?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: root
+    password: root
+    driver-class-name: net.sf.log4jdbc.DriverSpy #com.mysql.jdbc.Driver
 #spring:
 #  datasource:
 #    url: jdbc:mysql://192.168.6.113:3306/sync?useUnicode=true&characterEncoding=utf8&useSSL=false # 注意加上 useSSL=false
@@ -12,26 +12,29 @@
 #    hikari:
 #      maximum-pool-size: 9 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
 
-spring:
-  datasource:
-    url: jdbc:h2:mem:test # 使用内存存储
-#    url: jdbc:h2:file:~/test # 使用物理盘存储
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#spring:
+#  datasource:
+#    url: jdbc:h2:mem:test # 使用内存存储
+##    url: jdbc:h2:file:~/test # 使用物理盘存储
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   # 开启控制台
-  h2:
-    console:
-      # 开启控制台，默认为 /h2-console
-      enabled: true
-      # 配置控制台路径
-#      path: /console
+#  h2:
+#    console:
+#      # 开启控制台，默认为 /h2-console
+#      enabled: true
+#      # 配置控制台路径
+##      path: /console
 
   jpa:
     generate-ddl: false
     show-sql: true
     hibernate:
-      ddl-auto: create-drop # create、create-drop、update、validate、none
+      ddl-auto: create # create、create-drop、update、validate、none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect  # 方言设置，默认就为MySQL5Dialect，或者MySQL5InnoDBDialect使用InnoDB引擎
 
   ## DATA WEB 相关配置 {@link SpringDataWebProperties}
   data:
@@ -50,9 +53,9 @@ spring:
     default-property-inclusion: non_null
     date-format: "yyyy-MM-dd HH:mm:ss"
 
-logging:
-  pattern:
-    console: "%clr{%d{yyyy-MM-dd HH:mm:ss.SSS}}{faint} | %clr{%5p} | %clr{%15.15t}{faint} | %clr{%-50.50c{1.}}{cyan} | %5L | %clr{%M}{magenta} | %msg%n%xwEx"
+#logging:
+#  pattern:
+#    console: "%clr{%d{yyyy-MM-dd HH:mm:ss.SSS}}{faint} | %clr{%5p} | %clr{%15.15t}{faint} | %clr{%-50.50c{1.}}{cyan} | %5L | %clr{%M}{magenta} | %msg%n%xwEx"
 
 server:
   compression:
