--- a/spring-boot-data-jpa/pom.xml
+++ b/spring-boot-data-jpa/pom.xml
@@ -4,13 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.yangbingdong</groupId>
+        <artifactId>spring-boot-parent-dependencies</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../spring-boot-parent-dependencies/pom.xml</relativePath>
     </parent>
 
-    <groupId>com.yangbingdong</groupId>
     <artifactId>spring-boot-data-jpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
