--- a/spring-boot-security/pom.xml
+++ b/spring-boot-security/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.yangbingdong</groupId>
+        <artifactId>spring-boot-parent-dependencies</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../spring-boot-parent-dependencies/pom.xml</relativePath>
     </parent>
-    <groupId>com.yangbingdong</groupId>
+
     <artifactId>spring-boot-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-security</name>
