--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>spring-boot-websocket</module>
         <module>spring-boot-security</module>
         <module>spring-boot-mail</module>
+        <module>spring-boot-redis</module>
     </modules>
 
 </project>
